Migration (#3)
* chore(upload): added multer infra

* chore(migration): added external serrvices clients

* chore(migration): added models

* chore(migration): added controller

* chore(migration): added error handling

* style(migration): fixed linting

* chore(migration): added confd

* feat(migration): integrated migrated componnets

* chore(migration): added swagger

* feat(migration): complated logic integration

* test(migration): migrated unit tests

* style: fixed spacing

* style(migration): fixed spacing

* chore(cr): updated for code review
