# src/models/createUploadRequest.ts
@@ -1,0 +1,7 @@
+import { ImageMetadata } from '@map-colonies/mc-model-types';
+
+export interface CreateUploadRequest {
+  additionalData: ImageMetadata;
+  file: unknown[];
+  additionalFiles: unknown[];
+}
