# src/models/updateUploadRequest.ts
@@ -1,0 +1,7 @@
+import { ImageMetadata } from '@map-colonies/mc-model-types';
+
+export interface UpdateUploadRequest {
+  additionalData: ImageMetadata;
+  file: unknown[];
+  additionalFiles: unknown[];
+}
