# src/routers/global.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express';
-import { helloWorldRouter } from './helloWorld';
+import bodyParser from 'body-parser';
+import { uploadsRouter } from './uploades';
 import { swaggerRouter } from './swagger';
 
 const globalRouter = Router();
-globalRouter.use(swaggerRouter);
-globalRouter.use('/helloWorld', helloWorldRouter);
+globalRouter.use(bodyParser.json(),swaggerRouter);
+globalRouter.use('/upload', uploadsRouter);
 
 export { globalRouter };
